Fix: Overflow trouble

--- a/app/assets/stylesheets/styles/_events.scss
+++ b/app/assets/stylesheets/styles/_events.scss
@@ -27,6 +27,7 @@
     padding: $card-padding;
     box-sizing: border-box;
     width: 100%;
+    overflow-y: auto;
   }
 
   .left {
